# lambdabot

./: .dockerignore  .gitignore  .pylintrc  AGENTS.md  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  worker.py
data_slacklake/: config.py  config_shared.py  ingress_config.py  prompts.py  utils.py  worker.py
data_slacklake/catalog/: definitions.py  generate_contexts.py  live_catalog.py  loader.py
data_slacklake/services/: ai_service.py  db_service.py  genie_service.py  idempotency_service.py  queue_service.py  router_service.py  slack_mention_service.py  slack_service.py  vector_search_service.py
notebooks/: generate_catalog_contexts.py
tests/: conftest.py  test_ai_service.py  test_genie_service_auth.py  test_genie_service_retry.py  test_router_service.py  test_worker.py
